<resources>
    <string name="app_name">Chetan\'s App</string>
    <string name="app_signup">SignUp</string>
    <string name="logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="banknames">
        <item>State Bank of India</item>
        <item>Standard Chartered</item>
        <item>HDFC</item>
        <item>IndusInd</item>
        <item>ICICI</item>
        <item>Federal</item>
        <item>Canara</item>
    </string-array>

    <string-array name="fuel_brands">
        <item>SELECT</item>
        <item>HP</item>
        <item>BP</item>
        <item>Shell</item>
        <item>Essar</item>
        <item>Indian Oil</item>
    </string-array>

    <string-array name="service_particular">
        <item>SELECT</item>
        <item>Service</item>
        <item>Repair</item>
    </string-array>

    <string-array name="mode_list">
        <item>SELECT</item>
        <item>Cash</item>
        <item>Card</item>
        <item>Online</item>
    </string-array>

    <string name="sign_up">SIGN UP</string>
    <string name="name">Enter Full Name</string>
    <string name="email">Enter Email ID</string>
    <string name="password">Enter Password</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>

    <string name="addservicebtn">ADD SERVICE DETAILS</string>
    <string name="addcardbtn">ADD CARD</string>
    <string name="addfuelbtn">ADD FUEL DETAILS</string>
    <string name="addexpensesbtn">ADD EXPENSE DETAILS</string>
    <string name="update_service_details">Update Details</string>
    <string name="update_card">UPDATE CARD</string>
    <string name="cardnumber">Card Number :</string>
    <string name="expiry">Expiry</string>
    <string name="cvv">CVV</string>
    <string name="sample_card_number">1234 XXXX XXXX 5678</string>
    <string name="sample_expiry">XX/XX</string>
    <string name="sample_cvv">XXX</string>
    <string name="cardname">Card Name :</string>
    <string name="addfueldetails">ADD DETAILS</string>
    <string name="currentreading">Current Meter Reading (kms)</string>
    <string name="currentdate">09-JUL-2018</string>
    <string name="lastreading">Last Meter Reading (kms)</string>
    <string name="fuelprice">Fuel Price per Litre</string>
    <string name="fuelamount">Amount of fuel filled</string>
    <string name="fuelfilled">Fuel Filled (Ltrs)</string>
    <string name="fuelfilleddate">Fuel filled Date</string>
    <string name="fueltracker">Vehicle Fuel Tracker</string>
    <string name="rs">\u20B9</string>
    <string name="fuelrs">\u20B9</string>

    <string name="text_card_type">Card Type</string>
    <string name="text_credit">Credit</string>
    <string name="text_debit">Debit</string>
    <string name="text_balance">Balance</string>
    <string name="text_card_number">Card Number</string>
    <string name="text_card_holder">Card Holder</string>
    <string name="text_expiry">Expiry</string>
    <string name="text_expiry_format">MM/YY</string>
    <string name="text_cvv">CVV</string>
    <string name="text_card_name">Card Name</string>
    <string name="text_bank_name">Bank Name: </string>
    <string name="text_login_available">Login Password Available</string>
    <string name="text_login_id">Login ID</string>
    <string name="text_login_password">Login Password</string>
    <string name="text_transaction_password">Transaction Password</string>
    <string name="select_yes">Yes</string>
    <string name="select_no">No</string>
    <string name="select_ok">OK</string>
    <string name="select_credit">Credit</string>
    <string name="select_debit">Debit</string>
    <string name="text_last_reading">Last Reading</string>
    <string name="tv_lastreading">Start Reading :</string>
    <string name="tv_curreading">End Reading :</string>
    <string name="tv_fuelprice">Fuel Price :</string>
    <string name="tv_fuelamount">Amount :</string>
    <string name="tv_fuelfilled">Fuel Filled :</string>
    <string name="tv_fueldate">Date :</string>
    <string name="tv_distcovered">Distance :</string>
    <string name="tv_fuelduration">Fuel Duration :</string>
    <string name="tv_mileage">Mileage :</string>
    <string name="tv_cardtype">Card Type</string>
    <string name="tv_bank">Banks</string>

    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="fuel_price">Fuel Price</string>
    <string name="fuel_filled">Fuel Filled</string>
    <string name="start_reading">Start Reading</string>
    <string name="end_reading">End Reading</string>
    <string name="enter_reading">Reading</string>
    <string name="enter_reading_error">Enter Reading and proceed&#8230;</string>
    <string name="enter_valid_reading">Reading should be greater than last reading&#8230;</string>
    <string name="distance">Distance</string>
    <string name="mileage">Mileage</string>
    <string name="expected_mileage">Expected Mileage Reading</string>
    <string name="fuel_duration">Fuel Duration</string>
    <string name="semi">:</string>
    <string name="particular">Particular</string>
    <string name="bike_service">Bike Service Details</string>
    <string name="bike_service_date">Service Date</string>
    <string name="bike_service_kilometers">Kilometers</string>
    <string name="description">Description</string>
    <string name="menu_cards">Cards</string>
    <string name="menu_services">Bike Services</string>
    <string name="menu_tracker">Fuel Tracker</string>
    <string name="check_mileage">Check Mileage</string>
    <string name="approx_mileage">Approx Mileage</string>
    <string name="text_mileage_details">Mileage Details</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_mode">Transaction Mode</string>
    <string name="transaction_category">Category</string>
    <string name="new_category">New Category</string>
    <string name="nav_cards">View Cards</string>
    <string name="nav_services">View Services</string>
    <string name="nav_fuel">Add Fuel</string>
    <string name="nav_allfuel">Fuel Details</string>
    <string name="nav_expenses">Expenses</string>
    <string name="card">Card</string>
    <string name="month_expenses">Month Expenses</string>
    <string name="valid_exp_transaction_type">Tick what type of transaction it is&#8230;</string>
    <string name="valid_exp_transaction_mode">Select transaction mode and proceed&#8230;</string>
    <string name="valid_exp_category">Select Category and proceed&#8230;</string>
    <string name="valid_exp_new_category">Enter New Category and proceed&#8230;</string>
    <string name="valid_exp_description">Enter Description and proceed&#8230;</string>
    <string name="valid_exp_card_selection">Select any of your Card and proceed&#8230;</string>
    <string name="valid_exp_amount">Enter Amount and proceed&#8230;</string>
    <string name="expense_inserted">Expense inserted successfully&#8230;</string>
    <string name="expense_insert_error">Expense not inserted correctly please check it once&#8230;</string>
    <string name="expense_mode">Mode</string>
    <string name="expense_card">Card</string>
    <string name="expense_category">Category</string>
    <string name="expense_description">Description</string>

    <string-array name="bank_names">
        <item>Allahabad Bank</item>
        <item>Andhra Bank</item>
        <item>Axis Bank</item>
        <item>Bank of Baroda</item>
        <item>Bank of India</item>
        <item>Canara Bank</item>
        <item>Central Bank of India</item>
        <item>Citi Bank</item>
        <item>Corporation Bank</item>
        <item>Dena Bank</item>
        <item>Digi Bank</item>
        <item>Federal Bank</item>
        <item>HDFC Bank</item>
        <item>HSBC Bank</item>
        <item>ICICI Bank</item>
        <item>IDBI Bank</item>
        <item>IDFC Bank</item>
        <item>Indian Bank</item>
        <item>Indian Overseas Bank</item>
        <item>IndusInd Bank</item>
        <item>Karnataka Bank</item>
        <item>Karur Vysya Bank</item>
        <item>Kotak Mahindra Bank</item>
        <item>Lakshmi Vilas Bank</item>
        <item>Punjab National Bank</item>
        <item>RBL Bank</item>
        <item>South Indian Bank</item>
        <item>Standard Chartered Bank</item>
        <item>State Bank of India</item>
        <item>Syndicate Bank</item>
        <item>UCO Bank</item>
        <item>Union Bank of India</item>
        <item>United Bank of India</item>
        <item>Vijaya Bank</item>
        <item>Yes Bank</item>
    </string-array>

    <string-array name="bank_codes">
        <item>B001</item>
        <item>B002</item>
        <item>B003</item>
        <item>B004</item>
        <item>B005</item>
        <item>B006</item>
        <item>B007</item>
        <item>B008</item>
        <item>B009</item>
        <item>B010</item>
        <item>B011</item>
        <item>B012</item>
        <item>B013</item>
        <item>B014</item>
        <item>B015</item>
        <item>B016</item>
        <item>B017</item>
        <item>B018</item>
        <item>B019</item>
        <item>B020</item>
        <item>B021</item>
        <item>B022</item>
        <item>B023</item>
        <item>B024</item>
        <item>B025</item>
        <item>B026</item>
        <item>B027</item>
        <item>B028</item>
        <item>B029</item>
        <item>B030</item>
        <item>B031</item>
        <item>B032</item>
        <item>B033</item>
        <item>B034</item>
        <item>B035</item>
    </string-array>

    <string-array name="bank_images">
        <item>allahabad_bank.png</item>
        <item>andhra_bank.png</item>
        <item>axis_bank.png</item>
        <item>baroda_bank.png</item>
        <item>bank_of_india.png</item>
        <item>canara_bank.png</item>
        <item>central_bank.png</item>
        <item>citi_card.png</item>
        <item>corporation_bank.png</item>
        <item>dena_bank.png</item>
        <item>digi_bank.png</item>
        <item>federal_bank.png</item>
        <item>hdfc_bank.png</item>
        <item>hsbc_bank.png</item>
        <item>icici_bank.png</item>
        <item>idbi_bank.png</item>
        <item>idfc_bank.png</item>
        <item>indian_bank.png</item>
        <item>indian_overseas_bank.png</item>
        <item>indusind_bank.png</item>
        <item>karnataka_bank.png</item>
        <item>karur_vysya_bank.png</item>
        <item>kotak_bank.png</item>
        <item>lakshmi_vilas_bank.png</item>
        <item>punjab_national_bank.png</item>
        <item>rbl_bank.png</item>
        <item>south_indian_bank.png</item>
        <item>standard_chartered_bank.png</item>
        <item>sbi_bank.png</item>
        <item>syndicate_bank.png</item>
        <item>uco_bank.png</item>
        <item>union_bank.png</item>
        <item>united_bank.png</item>
        <item>vijaya_bank.png</item>
        <item>yes_bank.png</item>
    </string-array>

    <string-array name="category_list">
        <item>SELECT</item>
        <item>HOME</item>
        <item>FOOD</item>
        <item>VEGETABLES</item>
        <item>RECHARGE</item>
        <item>TRAVEL</item>
        <item>FUEL</item>
        <item>OTHERS</item>
    </string-array>

    <string-array name="category_code_list">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>99</item>
    </string-array>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>