<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cards"
            android:title="@string/nav_cards" />
        <item
            android:id="@+id/nav_services"
            android:title="@string/nav_services" />
        <item
            android:id="@+id/nav_fueltrackers"
            android:title="@string/nav_allfuel" />
        <item
            android:id="@+id/nav_expenses"
            android:title="@string/nav_expenses" />
    </group>

    <!--<item android:title="@string/menu_cards">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_cards"
                    android:title="@string/nav_cards" />
            </group>
        </menu>
    </item>
    <item android:title="@string/menu_services">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_services"
                    android:title="@string/nav_services" />
            </group>
        </menu>
    </item>
    <item android:title="@string/menu_tracker">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_fuel"
                    android:title="@string/nav_fuel" />
                <item
                    android:id="@+id/nav_fueltrackers"
                    android:title="@string/nav_allfuel" />
            </group>
        </menu>
    </item>-->

</menu>
