<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_last_reading"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/semi"/>

        <TextView
            android:id="@+id/dlg_fuel_last_reading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_enter_reading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp8">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_enter_reading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_reading"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>